Tue Dec 15 10:23:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Optimized for loop (++i in stead of i++).

        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/KeyedSamples/Sender/Keyed_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/KeyedWriter/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenManyByMany/Sender/LMBM_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.cpp:
          Catching exceptions as const.

        * connectors/dds4ccm/tests/ListenManyByMany/Receiver/LMBM_Test_Receiver_exec.cpp:
          Catching exceptions as const.
          Extended tests on the listener callback.

Tue Dec 15 09:01:46 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/SLManyByMany:
        * connectors/dds4ccm/tests/SLManyByMany/Base:
        * connectors/dds4ccm/tests/SLManyByMany/Base/SL_ManyByMany_Base.idl:
        * connectors/dds4ccm/tests/SLManyByMany/Base/SL_ManyByMany_Base.mpc:
        * connectors/dds4ccm/tests/SLManyByMany/Connector:
        * connectors/dds4ccm/tests/SLManyByMany/Connector/SL_ManyByMany_Connector.idl:
        * connectors/dds4ccm/tests/SLManyByMany/Connector/SL_ManyByMany_Connector.mpc:
        * connectors/dds4ccm/tests/SLManyByMany/Connector/SL_ManyByMany_Connector_exec.cpp:
        * connectors/dds4ccm/tests/SLManyByMany/Connector/SL_ManyByMany_Connector_exec.h:
        * connectors/dds4ccm/tests/SLManyByMany/descriptors:
        * connectors/dds4ccm/tests/SLManyByMany/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/SLManyByMany/descriptors/run_test.pl: